--- a/public/signIn.html
+++ b/public/signIn.html
@@ -31,6 +31,7 @@
         <i class="fa fa-github submitButton"></i>
       </button>
     </form>
+    <div class="lastSearched">Last Signed:</div>
 
     <script src="signIn.js"></script>
   </body>
