--- a/public/signIn.html
+++ b/public/signIn.html
@@ -1,10 +1,13 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
+    <meta http-equiv="Expires" content="0" />
+    <meta http-equiv="Pragma" content="no-cache" />
+    <meta http-equiv="Cache-Control" content="no-cache" />
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="style.css" />
+    <link rel="stylesheet" href="/loginstyle.css" />
     <link
       href="https://fonts.googleapis.com/css2?family=Andika+New+Basic:wght@700&family=Exo+2:wght@300&family=Gelasio&display=swap"
       rel="stylesheet"
@@ -30,6 +33,15 @@
         placeholder="Sign In With Your GitHub Username"
         required
       />
+      <dev class="pass">
+        <input
+          class="loginPass"
+          id="password"
+          name="password"
+          placeholder="Password"
+          required
+        />
+      </dev>
 
       <button class="loginButtonContainer" type="submit">
         <i class="fa fa-github loginButton"></i>
