--- a/public/search.html
+++ b/public/search.html
@@ -1,57 +1,48 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta http-equiv="Expires" content="0" />
-    <meta http-equiv="Pragma" content="no-cache" />
-    <meta http-equiv="Cache-Control" content="no-cache" />
-    <meta charset="UTF-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="/style.css" />
-    <link
-      href="https://fonts.googleapis.com/css2?family=Andika+New+Basic:wght@700&family=Exo+2:wght@300&family=Gelasio&display=swap"
-      rel="stylesheet"
-    />
-    <link
-      rel="stylesheet"
-      href="https://maxcdn.bootstrapcdn.com/font-awesome/4.4.0/css/font-awesome.min.css"
-    />
-  </head>
 
-  <body>
-    <img src="GithubLogo.png" class="githubBackground" />
-    <div>
-      <a href="/log-out">LogOut</a>
-      <div class="container">
-        <label class="usernameClass usernameLabel" for="username"
-          >Github Lookup</label
-        >
-        <br />
-        <input
-          class="usernameClass usernameInput"
-          id="username"
-          name="username"
-          placeholder="Enter a github username"
-        />
-        <div class="buttonContainer">
-          <i class="fa fa-github submitButton"></i>
-        </div>
+<head>
+  <meta http-equiv="Expires" content="0" />
+  <meta http-equiv="Pragma" content="no-cache" />
+  <meta http-equiv="Cache-Control" content="no-cache" />
+  <meta charset="UTF-8" />
+  <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <link rel="stylesheet" href="/style.css" />
+  <link
+    href="https://fonts.googleapis.com/css2?family=Andika+New+Basic:wght@700&family=Exo+2:wght@300&family=Gelasio&display=swap"
+    rel="stylesheet" />
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.4.0/css/font-awesome.min.css" />
+</head>
+
+<body>
+  <img src="GithubLogo.png" class="githubBackground" />
+  <div>
+    <a href="/log-out">LogOut</a>
+    <div class="container">
+      <label class="usernameClass usernameLabel" for="username">Github Lookup</label>
+      <br />
+      <input class="usernameClass usernameInput" id="username" name="username" placeholder="Enter a github username" />
+      <div class="buttonContainer">
+        <i class="fa fa-github submitButton"></i>
       </div>
-      <div class="resultsContainer">
-        <div class="profileContainer"></div>
-        <div class="infoContainer">
-          <div class="cloneRepo">
-            <div class="repoName"></div>
-            <div class="repoOwner"></div>
-            <div class="repoDesc"></div>
-            <div class="repoUpdate"></div>
-            <div class="repoCreate"></div>
-            <div class="repoStar"></div>
-          </div>
+    </div>
+    <div class="resultsContainer">
+      <div class="profileContainer"></div>
+      <div class="infoContainer">
+        <div class="cloneRepo">
+          <div class="repoName"></div>
+          <div class="repoOwner"></div>
+          <div class="repoDesc"></div>
+          <div class="repoUpdate"></div>
+          <div class="repoCreate"></div>
+          <div class="repoStar"></div>
         </div>
       </div>
     </div>
+  </div>
 
-    <script src="/search.js"></script>
-  </body>
+  <script src="/search.js"></script>
+</body>
+
 </html>
