--- a/public/signIn.html
+++ b/public/signIn.html
@@ -2,9 +2,13 @@
 <html lang="en">
 
 <head>
+  <meta http-equiv="Expires" content="0" />
+  <meta http-equiv="Pragma" content="no-cache" />
+  <meta http-equiv="Cache-Control" content="no-cache" />
   <meta charset="UTF-8" />
   <meta http-equiv="X-UA-Compatible" content="IE=edge" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <link rel="stylesheet" href="/loginstyle.css" />
   <link rel="stylesheet" href="style.css" />
   <link
     href="https://fonts.googleapis.com/css2?family=Andika+New+Basic:wght@700&family=Exo+2:wght@300&family=Gelasio&display=swap"
@@ -19,20 +23,14 @@
       <label class="loginLabel" for="username">Log-In</label>
     </dev>
     <br />
+
     <input class="loginInput" id="username" name="username" placeholder="Sign In With Your GitHub Username" required />
-    <dev class="pass">
-      <input class="loginPass" id="password" name="password" placeholder="Password" required />
-    </dev>
+    <br><input class="loginInput" id="password" name="password" placeholder="Sign In With Your GitHub Password"
+      required />
 
     <button class="loginButtonContainer" type="submit">
       <i class="fa fa-github loginButton"></i>
     </button>
-  </form>
-  <div class="lastSearched">Last Signed:</div>
-
-  <button class="loginButtonContainer" type="submit">
-    <i class="fa fa-github loginButton"></i>
-  </button>
   </form>
 
   <script src="signIn.js"></script>
