css login search

--- a/public/search.html
+++ b/public/search.html
@@ -21,7 +21,8 @@
   <body>
     <img src="GithubLogo.png" class="githubBackground" />
     <div>
-      <a href="/log-out">LogOut</a>
+      <a href="/log-out" class="btn">LogOut</a>
+
       <div class="container">
         <label class="usernameClass usernameLabel" for="username"
           >Github Lookup</label
