--- a/public/search.html
+++ b/public/search.html
@@ -21,7 +21,9 @@
   <body>
     <img src="GithubLogo.png" class="githubBackground" />
     <div>
-      <a href="/log-out">LogOut</a>
+      <div class="logoutBtn">
+        <a href="/log-out">Log Out</a>
+      </div>
       <div class="container">
         <label class="usernameClass usernameLabel" for="username"
           >Github Lookup</label
